@@ -27,8 +27,6 @@ import java.util.Map;
  * <p>For example :
  *
  * <p>Load orders.hpl Load orders 2.hpl Load orders 3.hpl etc.
- *
- * @author matt
  */
 public class SequenceResourceNaming extends SimpleResourceNaming {
 
@@ -53,17 +51,18 @@ public class SequenceResourceNaming extends SimpleResourceNaming {
   // Output Example 3 (file system prefix: ${HOP_FILE_BASE}!, path is used)
   // ${HOP_FILE_BASE}!japps/hop/samples/Marc_Sample_Pipeline_014.hpl
 
+  @Override
   protected String getFileNameUniqueIdentifier(String filename, String extension) {
 
     String key = filename + extension;
     Integer seq = sequenceMap.get(key);
     if (seq == null) {
-      seq = new Integer(2);
+      seq = Integer.valueOf(2);
       sequenceMap.put(key, seq);
       return null;
     }
 
-    sequenceMap.put(key, new Integer(seq.intValue() + 1));
+    sequenceMap.put(key, Integer.valueOf(seq.intValue() + 1));
 
     return seq.toString();
   }
