@@ -28,12 +28,7 @@ import org.apache.hop.pipeline.transform.TransformMeta;
 
 import java.util.HashMap;
 
-/**
- * Reads information from a database table by using freehand SQL
- *
- * @author Matt
- * @since 8-apr-2003
- */
+/** Reads information from a database table by using freehand SQL */
 public class ClosureGenerator extends BaseTransform<ClosureGeneratorMeta, ClosureGeneratorData>
     implements ITransform<ClosureGeneratorMeta, ClosureGeneratorData> {
 
@@ -141,7 +136,7 @@ public class ClosureGenerator extends BaseTransform<ClosureGeneratorMeta, Closur
 
       data.topLevel = null;
       if (meta.isRootIdZero()) {
-        data.topLevel = new Long(0);
+        data.topLevel = Long.valueOf(0);
       }
 
       return true;
